--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,41 @@
 <h3>Trainer</h3>
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
+<table>
+	<tr>
+		<td>
+			<b><u> Pokemon's name </u></b>
+		</td>
+		<td>
+			<b><u> Pokemon's level </u></b>
+		</td>
+		<td>
+			<b><u> Pokemon's health </u></b>
+		</td>
+		<td>
+			<b><u> Damage </u></b>
+		</td>
+	</tr>
+<% @trainer.pokemons.each do |pokemon| %>
+    <tr>
+   	<td>
+    <%= pokemon.name %>
+    
+	</td>
+	<td>
+	<%= pokemon.level %>
+	</td>
+	<td>
+	<%= pokemon.health %>
+	</td>
+	<td>
+    <%= button_to "Damage!", damage_path(id: pokemon.id), :class => "button medium", :method => :patch %>
+    </td>
+    </tr>  
+
+   <% end %>
+   
+</table>
+<% if @trainer.id == current_trainer.id %>
+ <%= button_to "New Pokemon!", new_pokemon_path, :class => "button medium", :method => :get %>
+<% end %>
